# aurum-observability

./: .env.example  .gitignore  README.md  compose.dev.yaml  pyproject.toml
grafana/dashboards/: README.md
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: postgres.yaml
postgres/: README.md  alembic.ini  env.py
postgres/migrations/: 001_live_trading.sql  002_backtest_analytics.sql
postgres/migrations/versions/: 20260718_000_baseline.py  20260718_001_live_trading.py  20260721_002_backtest_analytics.py  README.md
scripts/: run-migrations.sh  start-seaweedfs.sh
seaweedfs/: README.md
